--- a/polyaxonfile.yaml
+++ b/polyaxonfile.yaml
@@ -6,6 +6,7 @@ build:
   image: gw000/keras
   build_steps:
     - pip install polyaxon-client
-
+    - pip install pandas
+    
 run:
   cmd: python model.py
