--- a/polyaxonfile.yaml
+++ b/polyaxonfile.yaml
@@ -7,6 +7,7 @@ build:
   build_steps:
     - pip install polyaxon-client
     - pip install pandas
+    - pip install scikit-learn
     
 run:
   cmd: python model.py
